avance login admin
admin bg i

--- a/dircetur/index.html
+++ b/dircetur/index.html
@@ -6,55 +6,10 @@
 	<link rel="stylesheet" type="text/css" href="fonts.css">
 	<link rel="icon" type="image/png" href="./images/escudo.png">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-
-	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
-	<link rel="stylesheet" type="text/css" href="engine0/style.css" />
-	<script type="text/javascript" src="engine0/jquery.js"></script>
-	<!-- End WOWSlider.com HEAD section --></head>
-	<body >
-	
-	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
-	<div id="wowslider-container0">
-			<div class="ws_images">
-				<ul>
-					<li>
-					<a href="http://wowslider.net">
-						<img src="data0/images/sli1.jpg" alt="jquery image slider" title="sli1" id="wows0_0"/>
-					</a>
-					</li>
-					<li>
-						<img src="data0/images/sli2.jpg" alt="sli2" title="sli2" id="wows0_1"/>
-					</li>
-				</ul>
-			</div>
-			<div class="ws_bullets">
-				<div>
-					<a href="#" title="sli1">
-						<span>
-							<img src="data0/tooltips/sli1.jpg" alt="sli1"/>
-							1
-						</span>
-					</a>
-					<a href="#" title="sli2">
-						<span>
-							<img src="data0/tooltips/sli2.jpg" alt="sli2"/>
-							2
-						</span>
-					</a>
-				</div>
-			</div>
-				<div class="ws_script" style="position:absolute;left:-99%">
-					<a href="http://wowslider.net">
-						slider jquery
-					</a>
-					 by WOWSlider.com v8.8
-				</div>
-		<div class="ws_shadow"></div>
-	</div>	
-	<script type="text/javascript" src="engine0/wowslider.js"></script>
-	<script type="text/javascript" src="engine0/script.js"></script>
-	<!-- End WOWSlider.com BODY section --><header>
-		
+</head>
+<body background="./images/bg-mapa_3.jpg">
+	<header>
+		<img src="./images/LOGODIRCETURCOLOR.png" width="1154" height="285">
 		<div class="menu-bar">
 			<a href="#" class="btn_menu"><span class="icon-menu"></span>Menu</a>
 			
